fixed resource bundle loading, added resource bundle to controllers for in-code lookups, added missing translations, fixed preferences layout